# my_lang_compiler

./: .gitignore  README.md  SYNTAX.md  pyproject.toml  sample.src
my_lang_compiler/: ast_nodes.py  codegen.py  ir.py  ir_generator.py  lexer.py  main.py  optimizer.py  parser.py  semantic_analyzer.py  tokens.py
tests/: test_optimizer.py
